# xdg-user-dirs-gtk

./: Makefile.am  configure.ac  org.gnome.xdg-user-dirs.gschema.xml.in  parse.c  update.c  user-dirs-update-gtk.desktop.in
debian/: changelog  control  control.in  rules
po/: POTFILES.in
